@@ -726,5 +726,5 @@ ConfigView.label.prioritizefirstpiece=Prioritize first piece of file(s)
 ConfigView.label.prioritizefirstpiece.tooltip=Attempts to download the very beginning of a file first.\nFor support of early previewing.
 ConfigView.section.file.confirm_data_delete=Confirm when deleting data
 ConfigView.section.file.confirm_data_delete.tooltip=Confirm data deletion when using 'Remove and Delete...'
-
-
+TrayWindow.menu.startalldownloads=Start All Downloads
+SystemTray.menu.startalldownloads=Start All Downloads
